# SCR-Registration

./: .gitignore  README.md  eval_metrics.py  pyproject.toml  run_inference.py
configs/test/DFLNet/: VOL-17-1882_CIOS_FUSION.yaml
configs/test/PoseNet/: VOL-17-1882_CIOS_FUSION.yaml
configs/test/SCRNet/: VOL-17-1882_CIOS_FUSION.yaml
models/: __init__.py  dflnet.py  posenet.py  scrnet.py  unet.py
utils/: data_loading.py  evaluations.py  misc.py  model_helpers.py  visualizations.py
