[tool.poetry]
name = "scr-registration"
version = "0.1.0"
description = "Code for Scene Coordinate Regression Model"
authors = ["Pragyanstha <pragyanstha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
torch = "^2.1.1"
lightning = "^2.1.2"
wandb = "^0.16.0"
open3d = "^0.17.0"
opencv-python = "^4.8.1.78"
scipy = "^1.11.4"
scikit-image = "^0.22.0"
imageio = "^2.33.0"
torchvision = "^0.16.1"
pyvista = "^0.42.3"
tifffile = "^2023.9.26"
scikit-learn = "^1.3.2"
addict = "^2.4.0"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
